working on components

--- a/index.html
+++ b/index.html
@@ -18,5 +18,12 @@
     <link rel="stylesheet" href="/style/style.css" />
     <title>Frontend Mentor | Skilled e-learning landing page</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="nav">
+        <button class="button button-blue">Get stareted</button>
+        <button class="button button-grad-orange">Get stareted</button>
+      </nav>
+    </header>
+  </body>
 </html>
